# stacktower

./: .gitignore  CONTRIBUTING.md  README.md  go.mod  go.sum
.github/: FUNDING.yml
.github/workflows/: ci.yml  commitlint.yml  pages.yml  release.yml
blogpost/: index.html  llms.txt
cmd/stacktower/: main.go  main_test.go
examples/manifest/: Cargo.toml  Gemfile  composer.json  package-lock.json  package.json  requirements-copyleft.txt
examples/real/: cobra.json  com.google.guava_guava.json  console.json  flask.json  openai.json  rspec.json  serde.json  yargs.json
internal/cli/: auth.go  cache.go  cli.go  cli_test.go  diff.go  errors.go  errors_test.go  info.go  layout.go  list.go  parse.go  parse_github.go  parse_github_test.go  parse_test.go  pqtree.go  render.go  resolve.go  sbom.go  shared.go  stats.go  visualize.go  why.go
internal/cli/ui/: cobra.go  diff.go  output.go  paths.go  (+10 more)
pkg/: doc.go
pkg/buildinfo/: version.go
pkg/cache/: cache.go  cache_test.go  errors.go  instrumented.go
pkg/graph/: graph_test.go  layout.go  types.go
pkg/integrations/: circuitbreaker.go  circuitbreaker_test.go  client.go  client_test.go  common.go  ratelimit.go  semver.go  semver_test.go
pkg/observability/: hooks.go
pkg/pipeline/: list.go  parse.go  parse_metadata_test.go  pipeline.go  pipeline_test.go  render.go  resolve.go  runner.go  runner_test.go
pkg/sbom/: cyclonedx.go  cyclonedx_test.go  purl.go  purl_test.go  spdx.go  spdx_test.go  types.go
pkg/security/: doc.go  license.go  license_test.go  osv.go  scanner.go  severity.go
scripts/: blog_showcase.sh
(+61 files in other folders)
