[package]
name = "example-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.44.0", features = ["full"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
reqwest = { version = "^0.12.14", features = ["json"] }
clap = { version = "^4.5.31", features = ["derive"] }
tracing = "^0.1.41"
anyhow = "^1.0.97"

[dev-dependencies]
tokio-test = "0.4"

